--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "@vitejs/plugin-vue": "^5.1.3",
+        "@vue/compiler-sfc": "^3.5.5",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "vite": "^5.4.5"
     },
     "dependencies": {
         "laravel-echo": "^1.16.1",
-        "pusher-js": "^8.4.0-rc2"
+        "pusher-js": "^8.4.0-rc2",
+        "vue": "^3.5.5",
+        "vue-loader": "^17.4.2"
     }
 }
